Raise Nav z-index (fix feature dots order)

--- a/css/article.css
+++ b/css/article.css
@@ -85,7 +85,7 @@ body {
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: 10;
+  z-index: 20;
   height: 80px;
   padding: 0px 16px;
   box-sizing: border-box;
