--- a/scss/4-organisms/_nav.scss
+++ b/scss/4-organisms/_nav.scss
@@ -5,7 +5,7 @@ nav {
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 20;
     height: 80px;
     padding: 0px 16px;
     box-sizing: border-box;
